--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,10 @@
               {
                 "sourceTag": "scope:web",
                 "onlyDependOnLibsWithTags": ["scope:shared", "scope:web"]
+              },
+              {
+                "sourceTag": "scope:mobile",
+                "onlyDependOnLibsWithTags": ["scope:shared", "scope:mobile"]
               }
             ]
           }
