--- a/package.json
+++ b/package.json
@@ -4,29 +4,43 @@
   "license": "MIT",
   "scripts": {
     "start:web": "nx serve web",
+    "start:mobile:ios": "nx run-ios mobile",
+    "start:mobile:android": "nx run-android mobile",
     "build": "nx build",
     "test": "nx test",
     "verify": "nx format:write && nx format:check && nx affected -t lint --fix --parallel=3 && nx affected -t test --parallel=3 && nx affected -t build --parallel=3 --exclude=web"
   },
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.9.0",
+    "@nx/detox": "16.9.0",
     "@nx/eslint-plugin": "16.9.0",
     "@nx/jest": "16.9.0",
     "@nx/js": "16.9.0",
     "@nx/linter": "16.9.0",
     "@nx/next": "^16.9.0",
     "@nx/react": "16.9.0",
+    "@nx/react-native": "^16.9.0",
     "@nx/workspace": "16.9.0",
+    "@react-native-community/cli": "11.3.6",
+    "@react-native-community/cli-platform-android": "11.3.6",
+    "@react-native-community/cli-platform-ios": "11.3.6",
+    "@react-native/metro-config": "^0.72.11",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-native": "~5.4.3",
     "@testing-library/react": "14.0.0",
+    "@testing-library/react-native": "~12.3.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
+    "@types/node": "18.14.4",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
+    "detox": "^20.11.1",
     "eslint": "~8.46.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
@@ -36,9 +50,20 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-react-native": "18.0.0",
+    "metro": "0.76.7",
+    "metro-babel-register": "0.76.7",
+    "metro-config": "0.76.7",
+    "metro-react-native-babel-preset": "0.76.7",
+    "metro-react-native-babel-transformer": "0.76.7",
+    "metro-resolver": "0.76.7",
     "nx": "16.9.0",
     "prettier": "^2.6.2",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "1.0.0",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
@@ -47,6 +72,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-native": "0.72.4",
     "tslib": "^2.3.0"
   }
 }
