--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -2,7 +2,13 @@
   "name": "@nx-tamagui/ui",
   "version": "0.0.1",
   "dependencies": {
-    "@swc/helpers": "~0.5.2"
+    "@swc/helpers": "~0.5.2",
+    "tamagui": "^1.69.3",
+    "@tamagui/animations-react-native": "^1.69.3",
+    "@tamagui/font-inter": "^1.69.3",
+    "@tamagui/shorthands": "^1.69.3",
+    "@tamagui/themes": "^1.69.3",
+    "@tamagui/react-native-media-driver": "^1.69.3"
   },
   "type": "commonjs",
   "main": "./src/index.js",
