--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:nextjs": "nx serve web-nextjs"
+    "start:nextjs": "nx serve web-nextjs",
+    "start:react": "nx serve web-react"
   },
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "16.9.0",
     "@nx/eslint-plugin": "16.9.0",
     "@nx/jest": "16.9.0",
     "@nx/js": "16.9.0",
     "@nx/linter": "16.9.0",
     "@nx/next": "^16.9.0",
-    "@nx/react": "16.9.0",
+    "@nx/react": "^16.9.0",
+    "@nx/webpack": "16.9.0",
     "@nx/workspace": "16.9.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
@@ -36,11 +44,14 @@
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.9.0",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@swc/helpers": "~0.5.2",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
