--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "start:nextjs": "nx serve web-nextjs",
     "start:react": "nx serve web-react",
+    "start:native:": "nx start mobile-native",
+    "start:native:ios": "nx run-ios mobile-native",
     "start:native:android": "nx run-android mobile-native",
-    "start:native:ios": "nx run-ios mobile-native"
+    "start:expo": "nx start mobile-expo",
+    "start:expo:ios": "nx run-ios mobile-expo",
+    "start:expo:android": "nx run-android mobile-expo"
   },
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@config-plugins/detox": "~6.0.0",
+    "@expo/cli": "~0.10.12",
     "@nx/cypress": "16.9.0",
     "@nx/detox": "16.9.0",
     "@nx/eslint-plugin": "16.9.0",
+    "@nx/expo": "^16.9.0",
     "@nx/jest": "16.9.0",
     "@nx/js": "16.9.0",
     "@nx/linter": "16.9.0",
@@ -42,8 +49,10 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-jest": "^29.4.1",
+    "babel-preset-expo": "~9.5.2",
     "cypress": "^13.0.0",
     "detox": "^20.11.1",
+    "eas-cli": "~5.2.0",
     "eslint": "~8.46.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "8.1.0",
@@ -55,6 +64,7 @@
     "jest": "^29.4.1",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-expo": "~49.0.0",
     "jest-react-native": "18.0.0",
     "metro": "0.76.7",
     "metro-babel-register": "0.76.7",
@@ -74,11 +84,16 @@
     "url-loader": "^4.1.1"
   },
   "dependencies": {
+    "@expo/metro-config": "~0.10.7",
     "@swc/helpers": "~0.5.2",
+    "expo": "49.0.10",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-web": "~0.19.8",
     "tslib": "^2.3.0"
   }
 }
