--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "start:native:android": "nx run-android mobile-native",
     "start:expo": "nx start mobile-expo",
     "start:expo:ios": "nx run-ios mobile-expo",
-    "start:expo:android": "nx run-android mobile-expo"
+    "start:expo:android": "nx run-android mobile-expo",
+    "verify:affected": "nx format:write && nx format:check && nx affected -t lint --fix --parallel=3 && nx affected -t test --parallel=3",
+    "verify:all": "nx format:write && nx format:check && nx run-many -t lint --fix --parallel=3 && nx run-many -t test --parallel=3",
+    "----NOTICE-1----": "Nextjs is excluded because static page generation may require a backend running during build time",
+    "----NOTICE-2----": "Expo is excluded because build is so looooong",
+    "build:affected": "nx affected -t build --parallel=3 --exclude=web-nextjs --exclude=mobile-expo",
+    "build:all": "nx run-many -t build --parallel=3 --exclude=web-nextjs --exclude=mobile-expo"
   },
   "private": true,
   "devDependencies": {
